# feather

./: .clang-format  .gitignore  .gitmodules  Makefile  README.md  flash.sh
app/: Makefile  sdkconfig
app/main/: app.c  app.h  app_main.c  main.c
app/main/include/: app.h
client/src/: feather_client.py
server/: .gitignore  CMakeLists.txt  flash.sh
server/components/version/include/: version.h
server/main/: CMakeLists.txt  app.c  main.c  temp_sensor.c
server/main/include/: app.h  temp_sensor.h  wifi_config.h
